# ucp

./: .cspell.json  .cursorrules  .linkignore  .pre-commit-config.yaml  .prettierignore  404.html  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  PROPOSAL.md  README.md  RELEASE.md  SECURITY.md  SKILL.md  generate_schemas.py  generate_ts_schema_types.js  hooks.py  index.html  index.md  llms-full.txt  llms.txt  main.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-docs.txt  schema_utils.py  sitemap.xml  validate_specs.py  versions.json
.cspell/: custom-words.txt
.cursor/rules/: global-agents.mdc
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/workflows/: auto-label.yml  ci.yaml  docs.yml  (+10 more)
.pre-commit-hooks/: check-schema-sync.sh
2026-01-11/: 404.html  llms-full.txt  sitemap.xml
2026-01-23/: 404.html  index.html  llms-full.txt  llms.txt  sitemap.xml
2026-04-08/: 404.html  llms-full.txt  llms.txt  sitemap.xml
_review/: redos.mjs  redos.py  run_node.mjs  run_py.py  vectors.json
docs/: index.md  playground.md  versioning.md
draft/: 404.html  llms-full.txt  llms.txt  sitemap.xml
local_preview/: sitemap.xml
rfcs/: affiliate-attribution.md  intent-trace.md
scripts/: build_local.sh  check_links.py  ci_check_models.sh  regenerate_artifacts.sh  super_linter_local.py  test_check_links.py  test_main_macros.py  test_validate_examples.py  validate_examples.py
search/: search_index.json
tests/: __init__.py  test_schema_utils.py
versioning/: index.html
(+833 files in other folders)
